Fix grafici , risoluzione di problemi front end